extract additional features

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -27,6 +27,7 @@
     "    GSR,\n",
     "    Resp,\n",
     "    EGG,\n",
+    "    MARKER_TO_CHANNEL_NAMES,\n",
     ")\n",
     "from feature_extraction import (\n",
     "    Feature,\n",
@@ -57,6 +58,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c7230fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "    load features from csv\n",
+    "\"\"\"\n",
+    "from dataframe.csv_utils import (\n",
+    "    load_data_from_csv,\n",
+    "    get_labels_from_result,\n",
+    "    get_features_from_result,\n",
+    ")\n",
+    "\n",
+    "dir_name = \"extracted_features_v1\"\n",
+    "result = load_data_from_csv(dir_name)\n",
+    "all_label_array, label_list = get_labels_from_result(result)\n",
+    "all_feature_array, feature_names = get_features_from_result(result)\n",
+    "all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
+    "feature_names = all_feature_array.columns\n",
+    "print(all_feature_array.shape, len(feature_names), len(label_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e1f4b9f7",
    "metadata": {},
    "outputs": [],
@@ -75,7 +101,7 @@
     "    \"../2011\",\n",
     "    \"../2012\",\n",
     "    \"../2013\",\n",
-    "]  # \"../2000_CleanData\", \"../2001_CleanData\", \"../1004_CleanData\"  \"../2003\", \"../2004\", \"../2005\", \"../2006\"\n",
+    "]\n",
     "\n",
     "dir_to_data = {}\n",
     "for dir_name in ALL_DIRS:\n",
@@ -86,93 +112,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1322717",
+   "id": "d1ff65df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" \n",
-    "  extract labels from behavior data\n",
-    "\"\"\"\n",
-    "all_label_array = extract_labels(dir_to_data, all_dir=ALL_DIRS)\n",
-    "label_list = get_categorical_labels(all_label_array, valence_threshold=0.65)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4f557af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from dataframe.extraction import (\n",
+    "    extract_features_by_markers,\n",
+    ")\n",
+    "\n",
     "\"\"\"\n",
     "  extract features from physiological signals\n",
     "\"\"\"\n",
-    "feature_names = []\n",
-    "all_feature_array = []\n",
-    "for m in [Resp.__name__]:  # , EEG.__name__ BP.__name__, ECG.__name__, EGG.__name__\n",
-    "    f_array, names = (\n",
-    "        extract_features(m, dir_to_data, EEG_BANDS_LIST, ALL_DIRS)\n",
-    "        if m == EEG.__name__\n",
-    "        else extract_features(m, dir_to_data, all_dir=ALL_DIRS)\n",
+    "# (TODO) GSR, Resp, TREV\n",
+    "markers = [ECG.__name__, BP.__name__, EGG.__name__]\n",
+    "for s in ALL_DIRS:\n",
+    "    # extract features\n",
+    "    df = extract_features_by_markers(markers, dir_to_data, [s])\n",
+    "    print(s, df.shape)\n",
+    "    subject_features = result[result[\"Subject\"] == s]\n",
+    "    subject_features = subject_features.reset_index()\n",
+    "\n",
+    "    all_features = pd.concat([df, subject_features], axis=1)\n",
+    "    # save features to csv\n",
+    "    subject_name = s.replace(\"../\", \"\")\n",
+    "    all_features.to_csv(\n",
+    "        f\"extracted_features_v1/{subject_name}_features.csv\", index=False\n",
     "    )\n",
-    "    print(f\"extracted {m} stats or PSD features\")\n",
-    "    all_feature_array.append(f_array)\n",
-    "    feature_names.extend(names)\n",
     "\n",
-    "all_feature_array = np.concatenate(all_feature_array, axis=-1)\n",
-    "\n",
-    "print(all_feature_array.shape, len(feature_names), len(label_list))\n",
-    "df = pd.DataFrame(all_feature_array, columns=feature_names)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43b17233",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\" \n",
-    "    save features to csv\n",
-    "\"\"\"\n",
-    "\n",
-    "NUM_DATA_PER_SUBJECT = 130\n",
-    "df = pd.DataFrame(all_feature_array, columns=feature_names)\n",
-    "\n",
-    "subjects = []\n",
-    "for i, _ in enumerate(all_feature_array):\n",
-    "    subjects.append(ALL_DIRS[int(i / NUM_DATA_PER_SUBJECT)])\n",
-    "\n",
-    "df[\"Subject\"] = subjects\n",
-    "df[\"Valence\"] = all_label_array[\"valence\"]\n",
-    "df[\"Arousal\"] = all_label_array[\"arousal\"]\n",
-    "df[\"Attention\"] = all_label_array[\"attention\"]\n",
-    "\n",
-    "df.to_csv(\"2012_2013_subjects_eeg_ecg_emg.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c7230fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "    load features from csv\n",
-    "\"\"\"\n",
-    "from dataframe.csv_utils import (\n",
-    "    load_data_from_csv,\n",
-    "    get_labels_from_result,\n",
-    "    get_features_from_result,\n",
-    ")\n",
-    "\n",
-    "dir_name = \"extracted_features\"\n",
-    "result = load_data_from_csv(dir_name)\n",
-    "label_list, _ = get_labels_from_result(result)\n",
-    "all_feature_array, feature_names = get_features_from_result(result)\n",
-    "print(all_feature_array.shape, len(feature_names), len(label_list))"
+    "    \"\"\" \n",
+    "      extract labels from behavior data\n",
+    "    \"\"\"\n",
+    "#     all_label_array = extract_labels(dir_to_data, all_dir=[s])\n",
+    "#     all_features[\"Valence\"] = all_label_array[\"valence\"]\n",
+    "#     all_features[\"Arousal\"] = all_label_array[\"arousal\"]\n",
+    "#     all_features[\"Attention\"] = all_label_array[\"attention\"]\n",
+    "#     all_features[\"Subject\"] = [s]*130"
    ]
   },
   {
@@ -190,35 +164,88 @@
     "    get_behavior_to_average_corr,\n",
     ")\n",
     "\n",
+    "marker = EOG.__name__\n",
     "behavior_to_rp = {}\n",
     "for b in [\"Valence\", \"Arousal\", \"Attention\"]:\n",
-    "    behavior_to_rp[b] = get_feature_to_corr_by_behavior(result, b, feature_names)\n",
+    "    behavior_to_rp[b] = get_feature_to_corr_by_behavior(\n",
+    "        result, b, feature_names, marker, \"both\"\n",
+    "    )\n",
     "\n",
-    "avg_condition_to_features = get_behavior_to_average_corr(behavior_to_rp)\n"
+    "avg_condition_to_features = get_behavior_to_average_corr(behavior_to_rp)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1143da2d",
+   "id": "cad5c2ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from plotting import (\n",
-    "#     plot_eeg_topomap_all_blocks,\n",
-    "#     plot_pd_scatter_by_marker,\n",
-    "# )\n",
+    "from plotting import (\n",
+    "    plot_correlation_table_by_channel,\n",
+    "    plot_k_chaneels_by_r_value,\n",
+    "    plot_eeg_topomap_all_blocks,\n",
+    ")\n",
     "\n",
-    "\"\"\" \n",
-    "    plot the scattor for physiological signals\n",
+    "\"\"\" plot the single channel correlation table\n",
     "\"\"\"\n",
-    "# plot_pd_scatter_by_marker(\"LEOG\", result, ['../2007', '../2002', '../2006'])\n",
+    "channel = 0\n",
+    "features = STAT_FEATURES\n",
+    "channel_names = MARKER_TO_CHANNEL_NAMES[marker]\n",
+    "for condition, feature_to_pc in avg_condition_to_features.items():\n",
+    "    label = f\"{channel_names[channel]} {condition}\"\n",
+    "    plot_correlation_table_by_channel(\n",
+    "        label,\n",
+    "        feature_to_pc,\n",
+    "        [\"pearson r\", \"pearson p\", \"spearman r\", \"spearman p\"],\n",
+    "        features,\n",
+    "        channel,\n",
+    "        True,\n",
+    "    )\n",
+    "\n",
+    "\"\"\" plot the top channel correlation table given r values\n",
+    "\"\"\"\n",
+    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
+    "#     features = feature_to_pc.keys()\n",
+    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, True, 10)\n",
+    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, False, 10)\n",
     "\n",
     "\"\"\" \n",
     "    plot the topography for eeg\n",
     "\"\"\"\n",
     "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     plot_eeg_topomap_all_blocks(condition, feature_to_pc)"
+    "#     plot_eeg_topomap_all_blocks(condition, feature_to_pc)\n",
+    "#     for f in list(EEG_BANDS.keys()):\n",
+    "#         plot_eeg_topomap_one_block(condition, f, feature_to_pc, all_block_names)\n",
+    "\n",
+    "\n",
+    "\"\"\" plot the top channel correlation table with different blocks\n",
+    "\"\"\"\n",
+    "# all_block_names = list(all_data.keys())\n",
+    "# all_block_names.sort()\n",
+    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
+    "#     plot_eeg_pearson_correlation_table(condition, feature_to_pc, all_block_names, 1)\n",
+    "\n",
+    "\"\"\" plot the series for the top k channels\n",
+    "\"\"\"\n",
+    "# define number of rows and columns for subplots\n",
+    "# nrow = 3\n",
+    "# ncol = 2\n",
+    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
+    "#     print(f\"{condition}\")\n",
+    "#     ser_list = get_eeg_pearson_correlation_series_all_blocks(feature_to_pc, channel_names, k=20)\n",
+    "#     plot_series(nrow, ncol, ser_list)\n",
+    "\n",
+    "\n",
+    "\"\"\" \n",
+    "    plot the time series given the marker and block\n",
+    "\"\"\"\n",
+    "# plot_time_series_by_epoch(all_data['audio_hvla'], 'EMG', 'audio_hvla', 0)\n",
+    "\n",
+    "\"\"\" \n",
+    "    plot the scattor for physiological signals\n",
+    "\"\"\"\n",
+    "# plot_pd_scatter_by_marker(\"LEOG\", result, ['../2007', '../2002', '../2006'])"
    ]
   },
   {
@@ -381,70 +408,6 @@
     "for b, feature_to_pc in avg_condition_to_features.items():\n",
     "    for f, pc in feature_to_pc.items():\n",
     "        avg_condition_to_features[b][f] = np.hstack((pc, spearman_corr[b][f]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cad5c2ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from plotting import (\n",
-    "#     plot_series,\n",
-    "#     plot_eeg_topomap_one_block,\n",
-    "#     plot_eeg_topomap_all_blocks,\n",
-    "#     plot_k_chaneels_by_r_value,\n",
-    "#     plot_eeg_pearson_correlation_table,\n",
-    "#     get_eeg_pearson_correlation_series_all_blocks,\n",
-    "#     plot_time_series_by_epoch,\n",
-    "# )\n",
-    "\n",
-    "\"\"\" \n",
-    "    plot the time series given the marker and block\n",
-    "\"\"\"\n",
-    "# plot_time_series_by_epoch(all_data['audio_hvla'], 'EMG', 'audio_hvla', 0)\n",
-    "\n",
-    "\n",
-    "\"\"\" plot the single channel correlation table\n",
-    "\"\"\"\n",
-    "# channel = 3\n",
-    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     label = f\"{channel_names[channel]} {condition}\"\n",
-    "#     plot_correlation_table_by_channel(\n",
-    "#         label, feature_to_pc, [\"pearson r\", \"pearson p\", \"spearman r\", \"spearman p\"], features, channel, True\n",
-    "#     )\n",
-    "\n",
-    "\"\"\" plot the top channel correlation table given r values\n",
-    "\"\"\"\n",
-    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, True, 2)\n",
-    "#     plot_k_chaneels_by_r_value(feature_to_pc, channel_names, features, condition, False, 2)\n",
-    "\n",
-    "\n",
-    "\"\"\" plot the top channel correlation table with different blocks\n",
-    "\"\"\"\n",
-    "# all_block_names = list(all_data.keys())\n",
-    "# all_block_names.sort()\n",
-    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     plot_eeg_pearson_correlation_table(condition, feature_to_pc, all_block_names, 1)\n",
-    "\n",
-    "\"\"\" plot the series for the top k channels\n",
-    "\"\"\"\n",
-    "# define number of rows and columns for subplots\n",
-    "# nrow = 3\n",
-    "# ncol = 2\n",
-    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     print(f\"{condition}\")\n",
-    "#     ser_list = get_eeg_pearson_correlation_series_all_blocks(feature_to_pc, channel_names, k=20)\n",
-    "#     plot_series(nrow, ncol, ser_list)\n",
-    "\n",
-    "\"\"\" plot the topography for eeg\n",
-    "\"\"\"\n",
-    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "#     plot_eeg_topomap_all_blocks(condition, feature_to_pc)\n",
-    "#     for f in list(EEG_BANDS.keys()):\n",
-    "#         plot_eeg_topomap_one_block(condition, f, feature_to_pc, all_block_names)\n"
    ]
   },
   {
