--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -11,7 +11,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import mne\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# from importlib import reload\n",
@@ -52,7 +51,8 @@
     "from labels import get_categorical_labels, print_label_count\n",
     "\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -164,11 +164,11 @@
     "    get_behavior_to_average_corr,\n",
     ")\n",
     "\n",
-    "marker = EOG.__name__\n",
+    "marker = EEG.__name__\n",
     "behavior_to_rp = {}\n",
     "for b in [\"Valence\", \"Arousal\", \"Attention\"]:\n",
     "    behavior_to_rp[b] = get_feature_to_corr_by_behavior(\n",
-    "        result, b, feature_names, marker, \"both\"\n",
+    "        result, b, feature_names, marker, \"pearsonr\"\n",
     "    )\n",
     "\n",
     "avg_condition_to_features = get_behavior_to_average_corr(behavior_to_rp)"
@@ -189,19 +189,19 @@
     "\n",
     "\"\"\" plot the single channel correlation table\n",
     "\"\"\"\n",
-    "channel = 0\n",
-    "features = STAT_FEATURES\n",
+    "# channel = 1\n",
+    "# features = STAT_FEATURES\n",
     "channel_names = MARKER_TO_CHANNEL_NAMES[marker]\n",
-    "for condition, feature_to_pc in avg_condition_to_features.items():\n",
-    "    label = f\"{channel_names[channel]} {condition}\"\n",
-    "    plot_correlation_table_by_channel(\n",
-    "        label,\n",
-    "        feature_to_pc,\n",
-    "        [\"pearson r\", \"pearson p\", \"spearman r\", \"spearman p\"],\n",
-    "        features,\n",
-    "        channel,\n",
-    "        True,\n",
-    "    )\n",
+    "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
+    "#     label = f\"{channel_names[channel]} {condition}\"\n",
+    "#     plot_correlation_table_by_channel(\n",
+    "#         label,\n",
+    "#         feature_to_pc,\n",
+    "#         [\"pearson r\", \"pearson p\", \"spearman r\", \"spearman p\"],\n",
+    "#         features,\n",
+    "#         channel,\n",
+    "#         True,\n",
+    "#     )\n",
     "\n",
     "\"\"\" plot the top channel correlation table given r values\n",
     "\"\"\"\n",
@@ -215,7 +215,8 @@
     "\"\"\"\n",
     "# for condition, feature_to_pc in avg_condition_to_features.items():\n",
     "#     plot_eeg_topomap_all_blocks(condition, feature_to_pc)\n",
-    "#     for f in list(EEG_BANDS.keys()):\n",
+    "#     features = feature_to_pc.keys()\n",
+    "#     for f in features:\n",
     "#         plot_eeg_topomap_one_block(condition, f, feature_to_pc, all_block_names)\n",
     "\n",
     "\n",
@@ -293,21 +294,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "333daf49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from labels import get_tranformed_labels, binary_label, print_label_count\n",
+    "transformed = get_tranformed_labels(all_label_array)\n",
+    "label_list = get_categorical_labels(all_label_array, valence_threshold=0.6)\n",
+    "valence_lables = binary_label(all_label_array['valence'], 0.6)\n",
+    "print_label_count( label_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5eaa25ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GroupKFold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "import shap\n",
     "\n",
     "colors = [\"c\", \"y\", \"m\", \"r\"]\n",
     "\n",
-    "\n",
+    "NUM_LABEL_PER_SUBJECT = 130\n",
     "accuracy = []\n",
     "gkf = GroupKFold()\n",
     "label_array = np.array(label_list)\n",
-    "groups_list = [[i] for i, j in enumerate(label_list)]\n",
+    "groups_list = [[i/NUM_LABEL_PER_SUBJECT] for i, j in enumerate(label_list)]\n",
     "group_array = np.hstack(groups_list)\n",
     "\n",
     "# normalize\n",
@@ -315,10 +329,9 @@
     "normalized_all_feature_array = pd.DataFrame(\n",
     "    scaler.fit_transform(all_feature_array), columns=all_feature_array.columns\n",
     ")\n",
-    "#     normalized_all_feature_array = scaler.fit_transform(\n",
-    "#         all_feature_array.reshape(-1, all_feature_array.shape[-1])\n",
-    "#     ).reshape(all_feature_array.shape)\n",
     "\n",
+    "list_shap_values = list()\n",
+    "list_test_sets = list()\n",
     "for train_index, val_index in gkf.split(\n",
     "    normalized_all_feature_array, label_array, groups=group_array\n",
     "):\n",
@@ -342,13 +355,16 @@
     "\n",
     "    # Summary plot\n",
     "    shap_values = shap.TreeExplainer(model).shap_values(val_features)\n",
-    "    color_func = lambda i: colors[i % len(shap_values)]\n",
-    "    shap.summary_plot(\n",
-    "        shap_values,\n",
-    "        all_feature_array.columns,\n",
-    "        class_names=[\"nvla\", \"nvha\", \"hvla\", \"hvha\"],\n",
-    "        color=color_func,\n",
-    "    )\n"
+    "     #for each iteration we save the test_set index and the shap_values\n",
+    "    list_shap_values.append(shap_values)\n",
+    "    list_test_sets.append(val_index)\n",
+    "#     color_func = lambda i: colors[i % len(shap_values)]\n",
+    "#     shap.summary_plot(\n",
+    "#         shap_values,\n",
+    "#         all_feature_array.columns,\n",
+    "#         #class_names=[\"nvla\", \"nvha\", \"hvla\", \"hvha\"],\n",
+    "#         #color=color_func,\n",
+    "#     )\n"
    ]
   },
   {
@@ -359,7 +375,28 @@
    "outputs": [],
    "source": [
     "print(accuracy)\n",
-    "print(np.mean(accuracy))"
+    "print(np.mean(accuracy))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abb6ad65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combining results from all iterations\n",
+    "test_set = list_test_sets[0]\n",
+    "shap_values = np.array(list_shap_values[0])\n",
+    "for i in range(1,len(list_test_sets)):\n",
+    "    test_set = np.concatenate((test_set,list_test_sets[i]),axis=0)\n",
+    "    #shap_values = np.concatenate((shap_values,np.array(list_shap_values[i])),axis=1) # for multi\n",
+    "    shap_values = np.concatenate((shap_values,np.array(list_shap_values[i])),axis=0) # for binary\n",
+    "#bringing back variable names    \n",
+    "X_test = pd.DataFrame(normalized_all_feature_array.iloc[test_set],columns=all_feature_array.columns)\n",
+    "#creating explanation plot for the whole experiment, the first dimension from shap_values indicate the class we are predicting (0=0, 1=1)\n",
+    "shap.summary_plot(shap_values, X_test)  # for binary\n",
+    "#shap.summary_plot(shap_values[1], X_test)  # for multi i = class_num"
    ]
   },
   {
@@ -522,11 +559,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.10 (v3.8.10:3d8993a744, May  3 2021, 09:09:08) \n[Clang 12.0.5 (clang-1205.0.22.9)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
