Update get features util

--- a/analysis/analysis_notebook.ipynb
+++ b/analysis/analysis_notebook.ipynb
@@ -88,19 +88,11 @@
    "outputs": [],
    "source": [
     "ALL_DIRS = [\n",
-    "    \"../2000_CleanData\",\n",
-    "    \"../2001_CleanData\",\n",
-    "    \"../2002\",\n",
-    "    \"../2003\",\n",
-    "    \"../2004\",\n",
-    "    \"../2005\",\n",
-    "    \"../2006\",\n",
-    "    \"../2007\",\n",
-    "    \"../2009\",\n",
-    "    \"../2010\",\n",
-    "    \"../2011\",\n",
-    "    \"../2012\",\n",
-    "    \"../2013\",\n",
+    "    \"../CleandDataV1/2017\",\n",
+    "    \"../CleandDataV1/2018\",\n",
+    "    \"../CleandDataV1/2020\",\n",
+    "    \"../CleandDataV1/2024\",\n",
+    "    \"../CleandDataV1/2025\",\n",
     "]\n",
     "\n",
     "dir_to_data = {}\n",
@@ -123,30 +115,31 @@
     "\"\"\"\n",
     "  extract features from physiological signals\n",
     "\"\"\"\n",
-    "# (TODO) GSR, Resp, TREV\n",
-    "markers = [ECG.__name__, BP.__name__, EGG.__name__]\n",
+    "# (TODO) GSR, Resp, TREV  BP.__name__, EGG.__name__\n",
+    "markers = [EEG.__name__]\n",
     "for s in ALL_DIRS:\n",
     "    # extract features\n",
     "    df = extract_features_by_markers(markers, dir_to_data, [s])\n",
-    "    print(s, df.shape)\n",
-    "    subject_features = result[result[\"Subject\"] == s]\n",
-    "    subject_features = subject_features.reset_index()\n",
+    "#     print(s, df.shape)\n",
+    "#     subject_features = result[result[\"Subject\"] == s]\n",
+    "#     subject_features = subject_features.reset_index()\n",
     "\n",
-    "    all_features = pd.concat([df, subject_features], axis=1)\n",
+    "    all_features = df #pd.concat([df, subject_features], axis=1)\n",
     "    # save features to csv\n",
-    "    subject_name = s.replace(\"../\", \"\")\n",
-    "    all_features.to_csv(\n",
-    "        f\"extracted_features_v1/{subject_name}_features.csv\", index=False\n",
-    "    )\n",
+    "    subject_name = s.replace(\"../CleandDataV1/\", \"\")\n",
+    "\n",
     "\n",
     "    \"\"\" \n",
     "      extract labels from behavior data\n",
     "    \"\"\"\n",
-    "#     all_label_array = extract_labels(dir_to_data, all_dir=[s])\n",
-    "#     all_features[\"Valence\"] = all_label_array[\"valence\"]\n",
-    "#     all_features[\"Arousal\"] = all_label_array[\"arousal\"]\n",
-    "#     all_features[\"Attention\"] = all_label_array[\"attention\"]\n",
-    "#     all_features[\"Subject\"] = [s]*130"
+    "    all_label_array = extract_labels(dir_to_data, all_dir=[s])\n",
+    "    all_features[\"Valence\"] = all_label_array[\"valence\"]\n",
+    "    all_features[\"Arousal\"] = all_label_array[\"arousal\"]\n",
+    "    all_features[\"Attention\"] = all_label_array[\"attention\"]\n",
+    "    all_features[\"Subject\"] = [s]*130\n",
+    "    all_features.to_csv(\n",
+    "        f\"extracted_features_v1/{subject_name}_features.csv\", index=False\n",
+    "    )    "
    ]
   },
   {
