--- a/analysis/clustering_visualization.ipynb
+++ b/analysis/clustering_visualization.ipynb
@@ -27,7 +27,15 @@
     "#plotly imports\n",
     "import plotly as py\n",
     "import plotly.graph_objs as go\n",
-    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot"
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "\n",
+    "CLEANED_BETA_SUBJECT = [\n",
+    "    \"../CleandDataV1/2017\",\n",
+    "    \"../CleandDataV1/2018\",\n",
+    "    \"../CleandDataV1/2020\",\n",
+    "    \"../CleandDataV1/2024\",\n",
+    "    \"../CleandDataV1/2025\",\n",
+    "]"
    ]
   },
   {
@@ -43,8 +51,13 @@
     "\n",
     "dir_name = \"extracted_features_v1\"\n",
     "result = load_data_from_csv(dir_name)\n",
+    "\n",
+    "# Drop not cleaned beta subjects\n",
+    "# mask = result[\"Subject\"].isin(CLEANED_BETA_SUBJECT)\n",
+    "# result = result[mask]\n",
+    "\n",
     "all_label_array, label_list = get_labels_from_result(result)\n",
-    "all_feature_array, feature_names = get_features_from_result(result)\n",
+    "all_feature_array, feature_names = get_features_from_result(result, False)\n",
     "all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
     "feature_names = all_feature_array.columns\n",
     "print(all_feature_array.shape, len(feature_names), len(label_list))"
@@ -58,7 +71,7 @@
    "outputs": [],
    "source": [
     "#Filter features\n",
-    "eeg_features = all_feature_array.filter(regex=\"DELTA|THETA|ALPHA|GAMMA\")\n",
+    "eeg_features = all_feature_array.filter(regex=\".*(?<!GAMMA|BETA2|BETA1|ALPHA|THETA|DELTA)$\")\n",
     "eeg_features.head()"
    ]
   },
@@ -257,7 +270,7 @@
     "\n",
     "data = [trace1, trace2, trace3, trace4]\n",
     "\n",
-    "title = f\"EEG(excluding BETA): Clusters in One Dimension Using {method}\"\n",
+    "title = f\"EEG(including BETA): Clusters in One Dimension Using {method}\"\n",
     "\n",
     "layout = dict(title = title,\n",
     "              xaxis= dict(title= col_name,ticklen= 5,zeroline= False),\n",
@@ -316,7 +329,7 @@
     "\n",
     "data = [trace1, trace2, trace3, trace4]\n",
     "\n",
-    "title = f\"EEG(excluding BETA): Clusters in Two Dimensions Using {method}\"\n",
+    "title = f\"EEG(including BETA): Clusters in Two Dimensions Using {method}\"\n",
     "\n",
     "layout = dict(title = title,\n",
     "              xaxis= dict(title= col_name0,ticklen= 5,zeroline= False),\n",
@@ -418,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, May 19 2021, 11:01:55) \n[Clang 10.0.0 ]"
   }
  },
  "nbformat": 4,
