Add more visualization

--- a/analysis/supervised_learning.ipynb
+++ b/analysis/supervised_learning.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Basic imports\n",
+    "# Basic imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -17,7 +17,12 @@
     "    get_features_from_result,\n",
     ")\n",
     "\n",
-    "from labels import get_tranformed_labels, binary_label, print_label_count, get_categorical_labels\n",
+    "from labels import (\n",
+    "    get_tranformed_labels,\n",
+    "    binary_label,\n",
+    "    print_label_count,\n",
+    "    get_categorical_labels,\n",
+    ")\n",
     "\n",
     "# For machine learning modeling\n",
     "from sklearn.model_selection import GroupKFold\n",
@@ -39,14 +44,41 @@
     "    load features from csv\n",
     "\"\"\"\n",
     "\n",
-    "dir_name = \"extracted_features_v1\"\n",
+    "dir_name = \"eeg_features\"\n",
     "result = load_data_from_csv(dir_name)\n",
     "\n",
     "all_label_array, label_list = get_labels_from_result(result)\n",
-    "all_feature_array, feature_names = get_features_from_result(result, False)\n",
-    "all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
+    "all_feature_array, feature_names = get_features_from_result(\n",
+    "    result, [\"Subject\", \"Valence\", \"Arousal\", \"Attention\"], False\n",
+    ")\n",
+    "# all_feature_array = all_feature_array.drop([\"index\"], axis=1)\n",
+    "\n",
+    "filter_pattern = \".*(?<!BETA2)$\"\n",
+    "only_specific_feature = \".*GAMMA$\"\n",
+    "all_feature_array = all_feature_array.filter(regex=only_specific_feature)\n",
     "feature_names = all_feature_array.columns\n",
     "print(all_feature_array.shape, len(feature_names), len(label_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b61b20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA  # Principal Component Analysis\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "# Scale each column in numer\n",
+    "normalized_all_feature_array = pd.DataFrame(\n",
+    "    scaler.fit_transform(all_feature_array), columns=all_feature_array.columns\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# reduced_data = PCA(n_components=0.95).fit_transform(normalized_all_feature_array)\n",
+    "# normalized_all_feature_array = pd.DataFrame(reduced_data)\n",
+    "normalized_all_feature_array.head()"
    ]
   },
   {
@@ -58,10 +90,10 @@
    "source": [
     "transformed = get_tranformed_labels(all_label_array)\n",
     "label_list = get_categorical_labels(all_label_array, valence_threshold=0.6)\n",
-    "valence_lables = binary_label(all_label_array['valence'], 0.6)\n",
-    "is_multi = True\n",
+    "valence_lables = binary_label(all_label_array[\"valence\"], 0.65)\n",
+    "is_multi = False\n",
     "\n",
-    "#label_list = valence_lables\n",
+    "label_list = valence_lables\n",
     "print_label_count(label_list)"
    ]
   },
@@ -78,14 +110,8 @@
     "accuracy = []\n",
     "gkf = GroupKFold()\n",
     "label_array = np.array(label_list)\n",
-    "groups_list = [[i/NUM_LABEL_PER_SUBJECT] for i, j in enumerate(label_list)]\n",
+    "groups_list = [[i / NUM_LABEL_PER_SUBJECT] for i, j in enumerate(label_list)]\n",
     "group_array = np.hstack(groups_list)\n",
-    "\n",
-    "# normalize\n",
-    "scaler = StandardScaler()\n",
-    "normalized_all_feature_array = pd.DataFrame(\n",
-    "    scaler.fit_transform(all_feature_array), columns=all_feature_array.columns\n",
-    ")\n",
     "\n",
     "list_shap_values = list()\n",
     "list_test_sets = list()\n",
@@ -112,7 +138,7 @@
     "\n",
     "    # Summary plot\n",
     "    shap_values = shap.TreeExplainer(model).shap_values(val_features)\n",
-    "     #for each iteration we save the test_set index and the shap_values\n",
+    "    # for each iteration we save the test_set index and the shap_values\n",
     "    list_shap_values.append(shap_values)\n",
     "    list_test_sets.append(val_index)"
    ]
@@ -125,7 +151,7 @@
    "outputs": [],
    "source": [
     "print(accuracy)\n",
-    "print(np.mean(accuracy))"
+    "print(np.mean(accuracy))\n"
    ]
   },
   {
@@ -138,12 +164,18 @@
     "# combining results from all iterations\n",
     "test_set = list_test_sets[0]\n",
     "shap_values = np.array(list_shap_values[0])\n",
-    "for i in range(1,len(list_test_sets)):\n",
-    "    test_set = np.concatenate((test_set,list_test_sets[i]),axis=0)\n",
-    "    shap_values = np.concatenate((shap_values,np.array(list_shap_values[i])),axis=1) if is_multi else np.concatenate((shap_values,np.array(list_shap_values[i])),axis=0) # for binary\n",
+    "for i in range(1, len(list_test_sets)):\n",
+    "    test_set = np.concatenate((test_set, list_test_sets[i]), axis=0)\n",
+    "    shap_values = (\n",
+    "        np.concatenate((shap_values, np.array(list_shap_values[i])), axis=1)\n",
+    "        if is_multi\n",
+    "        else np.concatenate((shap_values, np.array(list_shap_values[i])), axis=0)\n",
+    "    )  # for binary\n",
     "\n",
-    "# bringing back variable names    \n",
-    "X_test = pd.DataFrame(normalized_all_feature_array.iloc[test_set],columns=all_feature_array.columns)\n",
+    "# bringing back variable names\n",
+    "X_test = pd.DataFrame(\n",
+    "    normalized_all_feature_array.iloc[test_set], columns=feature_names\n",
+    ")\n",
     "\n",
     "# creating explanation plot for the whole experiment, the first dimension from shap_values indicate the class we are predicting (0=0, 1=1)\n",
     "if is_multi:\n",
@@ -164,12 +196,12 @@
     "    concatenate_all_data,\n",
     ")\n",
     "\n",
+    "\n",
     "def get_raw_signal(dir_names, markers):\n",
     "    dir_to_data = {}\n",
     "    for dir_name in dir_names:\n",
     "        all_data = load_data_from_dir(dir_name)\n",
     "        dir_to_data[dir_name] = all_data\n",
-    "\n",
     "\n",
     "    \"\"\" \n",
     "        concatenate raw signal (x)\n",
@@ -179,7 +211,9 @@
     "    block_names.sort()\n",
     "\n",
     "    for m in markers:  # EOG.__name__, , EMG.__name__, EGG.__name__\n",
-    "        all_participants_data, condition_to_labels = concatenate_all_data(dir_to_data, m)\n",
+    "        all_participants_data, condition_to_labels = concatenate_all_data(\n",
+    "            dir_to_data, m\n",
+    "        )\n",
     "        all_epoch_data = np.swapaxes(\n",
     "            all_participants_data, 0, -1\n",
     "        )  # (num_channels, num_data_points, num_epochs) => (num_epochs, num_data_points, num_channels)\n",
@@ -189,13 +223,12 @@
     "    return np.concatenate(data_list, axis=2), condition_to_labels\n",
     "\n",
     "\n",
-    "\n",
     "ALL_DIRS = [\n",
     "    \"../CleandDataV1/2017\",\n",
     "    \"../CleandDataV1/2018\",\n",
     "]\n",
     "\n",
-    "data_array, condition_to_labels = get_raw_signal(ALL_DIRS, ['EEG'])"
+    "data_array, condition_to_labels = get_raw_signal(ALL_DIRS, [\"EEG\"])"
    ]
   },
   {
@@ -215,10 +248,10 @@
     "# label_array = np_utils.to_categorical(\n",
     "#     label_list, num_classes=4\n",
     "# )  # nvla, nvha, hvla, hvha\n",
-    "label_list = binary_label(condition_to_labels['valence'])\n",
+    "label_list = binary_label(condition_to_labels[\"valence\"])\n",
     "label_array = np.array(label_list)\n",
     "\n",
-    "groups_list = [[i/NUM_LABEL_PER_SUBJECT] for i, j in enumerate(label_list)]\n",
+    "groups_list = [[i / NUM_LABEL_PER_SUBJECT] for i, j in enumerate(label_list)]\n",
     "group_array = np.hstack(groups_list)\n",
     "\n",
     "print(data_array.shape, label_array.shape, group_array.shape)"
@@ -237,7 +270,7 @@
     "num_channel = data_array.shape[2]\n",
     "accuracy = train_with_cnn(12288, num_channel, data_array, label_array, group_array)\n",
     "print(accuracy)\n",
-    "print(np.mean(accuracy))"
+    "print(np.mean(accuracy))\n"
    ]
   },
   {
@@ -263,7 +296,7 @@
     "# feat_importances = pd.Series(importance, index=get_feature_names(importance))\n",
     "# feat_importances.nlargest(10).plot(\n",
     "#     kind=\"barh\", title=f\"{label_name} Feature Importance\"\n",
-    "# )\n"
+    "# )"
    ]
   }
  ],
